--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ minima:
   #  - { platform: stackoverflow,  user_url: "https://stackoverflow.com/users/1234567/jekyll" }
   #  - { platform: telegram,       user_url: "https://t.me/jekyll" }
   #  - { platform: twitter,        user_url: "https://twitter.com/jekyllrb" }
-    - { platform: x,              user_url: "https://x.com/cnhannon" }
+    - { platform: test-x,              user_url: "https://x.com/cnhannon" }
   #  - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
 
